--- a/aufgabe03/sass/main.scss
+++ b/aufgabe03/sass/main.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
-@import "compass/reset";
+/* @import "compass/reset";
 //sollte diese folgende Zeile zu einer Fehlermeldung führen - kommentieren Sie die folgende und die obere Zeile aus und kommentieren Sie die nachfolgende ein
-@import "compass/css3";
+@import "compass/css3"; */
 
 
 
@@ -11,24 +11,30 @@
 
 .btn {
     /* TODO */
+
     transition-property: padding;
     transition-duration: 300ms;
     transition-delay: 0ms;
     transition-timing-function: linear;
+
     &.ease-in {
         /* TODO */
+        // transition-timing-function: ease-in;
     }
 
     &.ease-out {
         /* TODO */
+        // transition-timing-function: ease-out;
     }
 
     &.ease-in-out {
         /* TODO */
+        transition-timing-function: ease-in-out;
     }
 
     &.green {
         /* TODO */
+        transition-property: all;
     }
 
     &.animation {
